--- a/mediapicker/src/main/res/values/colors.xml
+++ b/mediapicker/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorAccent">#2BD2E0</color>
+    <color name="colorPrimary">#00BDCD</color>
+    <color name="colorPrimaryDark">#0499A6</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +11,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white50">#1AFFFFFF</color>
+    <color name="colorBg">#1D242C</color>
+
 </resources>
