--- a/mediapicker/src/main/res/layout/custom_image_video_list_dialog_fragment.xml
+++ b/mediapicker/src/main/res/layout/custom_image_video_list_dialog_fragment.xml
@@ -67,7 +67,6 @@
         android:id="@+id/recyclerViewImagesVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/constraintSearch"
         android:clipToPadding="false"
         android:layout_marginTop="@dimen/_10sdp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
@@ -92,4 +91,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressCircular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
